--- a/src/styles/common/back2top.less
+++ b/src/styles/common/back2top.less
@@ -13,7 +13,7 @@
   transform: translateY(24px);
   transition: all 300ms ease-in-out;
   opacity: 0;
-  z-index: 999;
+  z-index: 5000;
   i {
     font-size: 24px;
     color: @color-text-accent;
