--- a/src/styles/pic/lightbox.less
+++ b/src/styles/pic/lightbox.less
@@ -10,7 +10,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 10000;
+  z-index: 5000;
   &-content {
     width: 100vw;
     box-shadow: 0 0 24px rgba(0, 0, 0, 0.15);
