--- a/src/styles/pic/overlay.less
+++ b/src/styles/pic/overlay.less
@@ -6,7 +6,7 @@
   height: 100vh;
   max-width: 100vw;
   max-height: 100vh;
-  z-index: 99999;
+  z-index: 1200;
   background: lighten(@color-primary, 25%);
   display: flex;
   flex-direction: column;
