--- a/src/styles/pic/pic.less
+++ b/src/styles/pic/pic.less
@@ -65,7 +65,7 @@
   justify-content: center;
   border-radius: 28px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-  z-index: 9999;
+  z-index: 2000;
   background: @color-accent;
   opacity: 0;
   transition: 300ms all ease-in-out;
